overflow problem in response-inner div solved.

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -595,7 +595,8 @@
 .responses-inner
 {
     padding: 20px;
-
+    overflow: hidden;
+    
     h5,
     h4
     {
